--- a/CommunityLeagueSports/views/addLeague.ejs
+++ b/CommunityLeagueSports/views/addLeague.ejs
@@ -1,16 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-Add a League
+<title> Add a League </title>
+  <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
+  <script src="/javascripts/addLeague.js"></script>
 </head>
-<body>
-  <div>
-    <form name="addLeague" method="post" action="/leagues">
-    League name:<input type="text" name="name"></br>
-    Sport:<input type="text" name="sport"></br>
-    Organization:<input type="text" name="organization"></br>
-    <input type="submit" value="Submit">
-  </form>
+<body ng-app="CommunityLeagueSports">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div ui-view></div>
+    </div>
   </div>
+
+  <script type="text/ng-template" id="/add.html">
+    <div class="page-header">
+      <h1>Leagues</h1>
+    </div>
+
+    <form ng-submit="addLeague()"
+      style="margin-top:30px;">
+      <h3>Add a new league</h3>
+
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Name" ng-model="name"></input>
+        <label for="sport">Sport:</label>
+          <select class="form-control" id="sport" ng-model="sport">
+            <option>Basketball</option>
+            <option>Soccer</option>
+            <option>Baseball</option>
+            <option>Tennis</option>
+          </select>
+        <label for="organization">Organization:</label>
+          <select class="form-control" id="organization" ng-model="organization">
+            <option value="5830bf9038f11012cd4a1a6c">Walmart</option>
+            <option value="5830bf9438f11012cd4a1a6d">JB Hunt</option>
+            <option value="5830bfa238f11012cd4a1a6e">Fayetteville Community</option>
+          </select>
+      <button type="submit" class="btn btn-block btn-primary">Submit</button>
+    </form>
+
+    <h3>Current Leagues</h3>
+    <div ng-repeat="league in leagues">
+      <span style="font-size:20px; margin-left:10px;">
+        {{league.name}}
+      </span>
+    </div>
+  </script>
 </body>
 </html>
