--- a/CommunityLeagueSports/views/addTeam.ejs
+++ b/CommunityLeagueSports/views/addTeam.ejs
@@ -1,18 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-Add a Team
+<title> Add a Team </title>
+  <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
+  <script src="/javascripts/addTeam.js"></script>
 </head>
-<body>
-  <div>
-    <form name="addTeam" method="post" action="/teams">
-    Team name:<input type="text" name="name"></br>
-    Sport:<input type="text" name="sport"></br>
-    League:<input type="text" name="league"></br>
-    Number of wins:<input type="text" name="wins"></br>
-    Number of losses:<input type="text" name="losses"></br>
-    <input type="submit" value="Submit">
-  </form>
+<body ng-app="CommunityLeagueSports">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div ui-view></div>
+    </div>
   </div>
+
+  <script type="text/ng-template" id="/add.html">
+    <div class="page-header">
+      <h1>Teams</h1>
+    </div>
+
+    <form ng-submit="addTeam()"
+      style="margin-top:30px;">
+      <h3>Add a new team</h3>
+
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Team Name" ng-model="name"></input>
+        <label for="sport">Sport:</label>
+          <select class="form-control" id="sport" ng-model="sport">
+            <option>Basketball</option>
+            <option>Soccer</option>
+            <option>Baseball</option>
+            <option>Tennis</option>
+          </select>
+        <label for="leagueID">League:</label>
+          <select class="form-control" id="leagueID" ng-model="leagueID">
+            <option value="5830c14938f11012cd4a1a70">Justice League</option>
+            <option value="5830c1a638f11012cd4a1a72">Walmart Intramural</option>
+            <option value="5830c1f838f11012cd4a1a73">Midlife Crisis League</option>
+          </select>
+      <button type="submit" class="btn btn-block btn-primary">Submit</button>
+    </form>
+
+    <h3>Current Teams</h3>
+    <div ng-repeat="team in teams">
+      <span style="font-size:20px; margin-left:10px;">
+        {{team.name}}
+      </span>
+    </div>
+  </script>
 </body>
 </html>
