--- a/CommunityLeagueSports/views/addUser.ejs
+++ b/CommunityLeagueSports/views/addUser.ejs
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-Add a User
+<title> Add a User </title>
+  <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
+  <script src="/javascripts/addUser.js"></script>
 </head>
-<body>
-  <div>
-    <form name="addUser" method="post" action="/users">
-    Email:<input type="text" name="email"></br>
-    Team:<input type="text" name="team"></br>
-    Type of user:<input type="text" name="type"></br>
-    Password:<input type="text" name="password"></br>
-    <input type="submit" value="Submit">
-  </form>
+<body ng-app="CommunityLeagueSports">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <div ui-view></div>
+    </div>
   </div>
+
+  <script type="text/ng-template" id="/add.html">
+    <div class="page-header">
+      <h1>Users</h1>
+    </div>
+
+    <form ng-submit="addUser()"
+      style="margin-top:30px;">
+      <h3>Add a new user</h3>
+
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Username" ng-model="username"></input>
+        <input type="password" class="form-control" placeholder="Password" ng-model="password"></input>
+        <input type="text" class="form-control" placeholder="Email" ng-model="email"></input>
+        <input type="text" class="form-control" placeholder="Type" ng-model="type"></input>
+        <label for="teamID">Team:</label>
+          <select class="form-control" id="teamID" ng-model="teamID">
+            <option value="5830c448d0424712e37e05de">Team Rocket</option>
+            <option value="5830c4b4d0424712e37e05df">Globetrotters</option>
+            <option value="5830c4cbd0424712e37e05e0">This Shouldn't Work</option>
+          </select>
+      <button type="submit" class="btn btn-block btn-primary">Submit</button>
+    </form>
+
+    <h3>Current Users</h3>
+    <div ng-repeat="user in users">
+      <span style="font-size:20px; margin-left:10px;">
+        {{user.username}}
+      </span>
+    </div>
+  </script>
 </body>
 </html>
